  04 May 2014; Alon Bar-Lev <alonbl@redhat.com> ovirt-engine-3.4.9999.ebuild,
  ovirt-engine-9999.ebuild:
  bump openstack sdk and sync master

  08 Apr 2014; Alon Bar-Lev <alonbl@redhat.com> ovirt-engine-3.3.4.ebuild,
  ovirt-engine-3.4.0.ebuild, ovirt-engine-3.4.9999.ebuild,
  ovirt-engine-9999.ebuild:
  Remove vdsm user as we do not support nfs for now, not required, and kvm does
  not exist by default

  03 Apr 2014; Alon Bar-Lev <alonbl@redhat.com> ovirt-engine-9999.ebuild:
  Add dev-python/numpy dependency

*ovirt-engine-3.4.0 (27 Mar 2014)

  27 Mar 2014; Alon Bar-Lev <alonbl@redhat.com> +ovirt-engine-3.4.0.ebuild,
  -ovirt-engine-3.3.1.ebuild, -ovirt-engine-3.3.2.ebuild,
  -ovirt-engine-3.3.3.ebuild, ovirt-engine-3.3.4.ebuild,
  ovirt-engine-3.4.9999.ebuild, ovirt-engine-9999.ebuild:
  Version bump

*ovirt-engine-3.4.9999 (05 Mar 2014)

  05 Mar 2014; Alon Bar-Lev <alonbl@redhat.com> +ovirt-engine-3.4.9999.ebuild,
  ovirt-engine-9999.ebuild:
  Add 3.4 branch

*ovirt-engine-3.3.4 (05 Mar 2014)

  05 Mar 2014; Alon Bar-Lev <alonbl@redhat.com> +ovirt-engine-3.3.4.ebuild:
  Version bump

*ovirt-engine-3.3.3 (04 Feb 2014)

  04 Feb 2014; Alon Bar-Lev <alonbl@redhat.com> +ovirt-engine-3.3.3.ebuild:
  version bump

  28 Jan 2014; Alon Bar-Lev <alonbl@redhat.com> files/ovirt-engine.init.d,
  ovirt-engine-3.3.2.ebuild, ovirt-engine-9999.ebuild:
  Misc updates

*ovirt-engine-3.3.2 (13 Jan 2014)

  13 Jan 2014; Alon Bar-Lev <alonbl@gentoo.org> +ovirt-engine-3.3.2.ebuild,
  ovirt-engine-9999.ebuild:
  Version bump

*ovirt-engine-3.3.1 (26 Nov 2013)

  26 Nov 2013; Alon Bar-Lev <alonbl@gentoo.org> +ovirt-engine-3.3.1.ebuild,
  files/ovirt-engine-notifier.init.d, files/ovirt-engine.init.d,
  ovirt-engine-9999.ebuild:
  ovirt-engine-3.3.1

  25 Oct 2013; Alon Bar-Lev <alonbl@redhat.com> +files/java-home.local,
  metadata.xml, ovirt-engine-9999.ebuild:
  sync with upstream

  27 Aug 2013; Alon Bar-Lev <alonbl@redhat.com> ovirt-engine-9999.ebuild: